# challenge-attack-rooks

./: Attack-Rooks.cabal  LICENSE  README.md  attack-rooks.cabal
src/: Main.hs  Rooks.hs
